--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     package="com.qmx.blewifi">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!-- for Android 6 and above -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> <!-- for Android 6 and above -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- for Android 6 and above -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!-- for Android 6 and above -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,7 +24,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".WifiConfigActivity" />
-        <activity android:name=".ConnectWifiActivity"></activity>
+        <activity android:name=".ConnectWifiActivity" />
+        <activity android:name=".OldBlueActivity" />
+        <activity android:name=".OldBlueConfigActivity"></activity>
     </application>
 
 </manifest>
