1.可完整进行蓝牙连接并反馈结果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".FunctionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,9 @@
         <activity android:name=".WifiConfigActivity" />
         <activity android:name=".ConnectWifiActivity" />
         <activity android:name=".OldBlueActivity" />
-        <activity android:name=".OldBlueConfigActivity"></activity>
+        <activity android:name=".OldBlueConfigActivity" />
+        <activity android:name=".GattServerActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
